# task-tracker-cli

./: .gitignore  Dockerfile  README.md  README.spec.md  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
src/task_cli/: __main__.py  cli.py  task.py  task_manager.py
tests/: test_task.py  test_task_manager.py
